Mon Jun 20 13:58:32 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/KeyedWriter/Receiver/Writer_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component_exec.cpp:
          Fixed coverity errors

Mon Jun 20 08:02:38 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/docs/TestCoverage.ods:
          Updated.

        * connectors/dds4ccm/tests/Derived/Derived.idl:
        * connectors/dds4ccm/tests/Derived/Derived_Connector.idl:
        * connectors/dds4ccm/tests/Derived/Derived_Connector.mpc:
          Code alignment. Corrected some incorrect names.

        * connectors/dds4ccm/tests/MultipleTemp/Connector/MultipleTemp_Connector_T.h:
          Code alignment.

Sun Jun 19 18:00:12 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Hello/Sender/Sender_exec.cpp:
          Fixed memory leak

Sat Jun 18 08:14:04 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * examples/Hello/Receiver/Receiver_exec.cpp:
          Fixed compiler error on windows.

Fri Jun 17 13:53:44 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * examples/Hello/descriptors/PlanLocality_DifferentProcesses.cdp:
          Renamed "SameProcess" to "DifferentProcess"

        * examples/Hello/step-by-step.html:
          Update. Fixed some typos.

Fri Jun 17 12:47:24 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * examples/Hello/step-by-step.html:
          Update. Started rewriting Assemble.

        * examples/Null_Component/Null_Component.mpc:
        * examples/Null_Component_Glfa/Null_Component.mpc:
          Let the TAO IDL compiler generate the executor files.

        * examples/Null_Component/Null_Component_exec.h:
        * examples/Null_Component/Null_Component_exec.cpp:
        * examples/Null_Component/plan.h:
        * examples/Null_Component_Glfa/Null_Component_exec.h:
        * examples/Null_Component_Glfa/Null_Component_exec.cpp: