@@ -1,14 +1,12 @@
 // $Id$
 // This file is generated with "generate_component_mpc.pl Messenger"
 
-project(Messenge_idl_gen) : componentidldefaults, avoids_ccm_noevent {
+project(Messenge_idl_gen) : ciaoidldefaults, avoids_ccm_noevent, anytypecode {
   custom_only = 1
   idlflags += -Wb,stub_export_macro=MESSENGER_STUB_Export \
               -Wb,stub_export_include=Messenger_stub_export.h \
               -Wb,skel_export_macro=MESSENGER_SVNT_Export \
               -Wb,skel_export_include=Messenger_svnt_export.h \
-              -Wb,exec_export_macro=MESSENGER_EXEC_Export \
-              -Wb,exec_export_include=Messenger_exec_export.h \
               -Wb,svnt_export_macro=MESSENGER_SVNT_Export \
               -Wb,svnt_export_include=Messenger_svnt_export.h \
 
@@ -20,15 +18,21 @@ project(Messenge_idl_gen) : componentidldefaults, avoids_ccm_noevent {
 project(Messenger_idl_gen) : componentidldefaults, avoids_ccm_noevent {
   after += Messenge_idl_gen
   custom_only = 1
-  idlflags -= -Gxhst -Gxhsk -Gxhsv -Gxhex
+  idlflags -= -Gxhst -Gxhsk -Gxhsv
   idlflags += -Wb,stub_export_macro=MESSENGER_STUB_Export \
               -Wb,stub_export_include=Messenger_stub_export.h \
               -Wb,skel_export_macro=MESSENGER_SVNT_Export \
-              -Wb,skel_export_include=Messenger_svnt_export.h
+              -Wb,skel_export_include=Messenger_svnt_export.h \
+              -Wb,exec_export_macro=MESSENGER_EXEC_Export \
+              -Wb,exec_export_include=Messenger_exec_export.h
   IDL_Files {
-    Runnable.idl
+    idlflags -= -Gxhex
     Publication.idl
     History.idl
+  }
+
+  IDL_Files {
+    Runnable.idl
   }
 }
 
@@ -56,7 +60,6 @@ project(Messenger_lem_gen) : ciaoidldefaults,  avoids_ccm_noevent {
     MessengerE.idl
     RunnableE.idl
     PublicationE.idl
-    MessageE.idl
     HistoryE.idl
   }
 }
@@ -110,7 +113,6 @@ project(Messenger_exec) : ciao_executor, avoids_ccm_noevent {
     MessengerEC.cpp
     RunnableEC.cpp
     PublicationEC.cpp
-    MessageEC.cpp
     HistoryEC.cpp
     Messenger_exec_i.cpp
     Publication_exec_i.cpp
